# sabi-mate

./: .gitignore  .pre-commit-config.yaml  README.md  langgraph.json  main.py  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: code-quality.yaml
data/: memory.db
src/ai_companion/: main.py  settings.py
src/ai_companion/core/: datetime_utils.py  exceptions.py  prompts.py  schedules.py
src/ai_companion/graph/: __init__.py  edges.py  graph.py  nodes.py  state.py
src/ai_companion/graph/utils/: chains.py  helpers.py
src/ai_companion/interfaces/whatsapp/: webhook_endpoint.py  whatsapp_response.py
src/ai_companion/modules/image/: __init__.py  image_to_text.py  text_to_image.py
src/ai_companion/modules/memory/long_term/: memory_manager.py  vector_store.py
src/ai_companion/modules/schedules/: context_generation.py
src/ai_companion/modules/speech/: __init__.py  speech_to_text.py  text_to_speech.py
tests/ai_companion/: test_main.py
