[project]
name = "sabi-mate"
version = "0.1.0"
description = "Your paddy wey sabi"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.3.27",
    "pre-commit>=4.2.0",
    "pydantic-settings>=2.8.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.399",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pyright]
exclude = [".venv"]
venvPath = "."
venv = ".venv"
