[project]
name = "sabi-mate"
version = "0.1.0"
description = "Your paddy wey sabi"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elevenlabs>=1.56.0",
    "fastapi[standard]>=0.115.12",
    "groq>=0.22.0",
    "langchain>=0.3.23",
    "langchain-groq>=0.3.2",
    "langgraph>=0.3.27",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "mcp[cli]>=1.6.0",
    "openai>=1.75.0",
    "pre-commit>=4.2.0",
    "pydantic-settings>=2.8.1",
    "pytz>=2025.2",
    "qdrant-client>=1.13.3",
    "sentence-transformers>=4.0.2",
    "together>=1.5.5",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.2.3",
    "pyright>=1.1.399",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pyright]
exclude = [".venv"]
venvPath = "."
venv = ".venv"
